Fix issue #19, DLL missing, and .config file missing from 2017 analyser.

--- a/SQLMetaDataToolkitInstaller/Product.wxs
+++ b/SQLMetaDataToolkitInstaller/Product.wxs
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <?define ProductVersion = "0.24.0.0"?>
+  <?define ProductVersion = "0.25.0.0"?>
   <?define UpgradeCode = "B758AA83-565F-453A-BECF-0B0B060E7023"?>
   <?define Manufacturer = "Keith Martin"?>
   <?define PackageCode = "*"?>
@@ -96,6 +96,7 @@
           <Directory Id="DependencyAnalyzer2017DIR" Name="Dependency Analyzer 2017">
             <Component Id="DependencyAnalyzer2017Exe" Guid="{8C98AD26-65CE-2017-8954-6E98F4E5BF1D}" Win64="no">
               <File Id="FDependencyAnalyzer2017Exe" Name="$(var.DependencyAnalyzer2017.TargetFileName)" Source="$(var.DependencyAnalyzer2017.TargetPath)" />
+              <File Id="FDependencyAnalyzer2017ExeConf" Name="$(var.DependencyAnalyzer2017.TargetFileName).config" Source="$(var.DependencyAnalyzer2017.TargetPath).config" />
             </Component>
             <Component Id="NUGetSMO" Guid="{8C98AD26-65CE-2017-8954-6E98F4E5BAAA}" Win64="no">
               <File Id="FMicrosoft.SqlServer.ConnectionInfo" Name="Microsoft.SqlServer.ConnectionInfo.dll" Source="$(var.DependencyAnalyzer2017.TargetDir)Microsoft.SqlServer.ConnectionInfo.dll" />
@@ -107,6 +108,7 @@
               <File Id="FMicrosoft.SqlServer.Smo" Name="Microsoft.SqlServer.Smo.dll" Source="$(var.DependencyAnalyzer2017.TargetDir)Microsoft.SqlServer.Smo.dll" />
               <File Id="FMicrosoft.SqlServer.SqlClrProvider" Name="Microsoft.SqlServer.SqlClrProvider.dll" Source="$(var.DependencyAnalyzer2017.TargetDir)Microsoft.SqlServer.SqlClrProvider.dll" />
               <File Id="FMicrosoft.SqlServer.SqlEnum" Name="Microsoft.SqlServer.SqlEnum.dll" Source="$(var.DependencyAnalyzer2017.TargetDir)Microsoft.SqlServer.SqlEnum.dll" />
+              <File Id="FMicrosoft.SqlServer.Management.IntegrationServicesEnum" Name="Microsoft.SqlServer.Management.IntegrationServicesEnum.dll" Source="$(var.DependencyAnalyzer2017.TargetDir)Microsoft.SqlServer.Management.IntegrationServicesEnum.dll" />
             </Component>
             <Component Id="DependencyAnalyzer2017Parser" Guid="{95C37E97-F292-2017-A9F3-097946B574F8}" Win64="no">
               <File Id="FDependencyAnalyzer2017Parser" Name="$(var.TSQLParser.TargetFileName)" Source="$(var.TSQLParser.TargetPath)" />
